src/main/resources/static/assets/css/bootstrap-custom.css
/* CUSTOM BOOTSTRAP CSS */

/* Custom buttons */

.btn-success2 { 
	color: #3F6F3F; 
	background-color: #BDDEAD; 
	border-color: #BDDEAD; 
} 

/* Custom panels*/
 
.panel-group{
	width:100%;
	margin-bottom:0px;
}
 
.panel-body{
	padding: 0px;
	overflow-x:scroll;
}

.panel-heading{
	padding-top:0px;
	padding-bottom:0px;
	padding-left:10px;
	padding-right:10px;
}
 
.btn-success2:hover, 
.btn-success2:focus, 
.btn-success2:active, 
.btn-success2.active, 
.open .dropdown-toggle.btn-success2 { 
	color: #3F6F3F; 
	background-color: #BDDEAD; 
	border-color: #BDDEAD; 
} 
 
.btn-success2:active, 
.btn-success2.active, 
.open .dropdown-toggle.btn-success2 { 
	background-image: none; 
} 
 
.btn-success2.disabled, 
.btn-success2[disabled], 
fieldset[disabled] .btn-success2, 
.btn-success2.disabled:hover, 
.btn-success2[disabled]:hover, 
fieldset[disabled] .btn-success2:hover, 
.btn-success2.disabled:focus, 
.btn-success2[disabled]:focus, 
fieldset[disabled] .btn-success2:focus, 
.btn-success2.disabled:active, 
.btn-success2[disabled]:active, 
fieldset[disabled] .btn-success2:active, 
.btn-success2.disabled.active, 
.btn-success2[disabled].active, 
fieldset[disabled] .btn-success2.active { 
	background-color: #BDDEAD; 
	border-color: #BDDEAD; 
} 
 
.btn-success2 .badge { 
	color: #BDDEAD; 
	background-color: #3F6F3F; 
}

.btn-failure2 { 
	color: #AF3C43; 
	background-color: #E8B1B2; 
	border-color: #E8B1B2; 
} 
 
.btn-failure2:hover, 
.btn-failure2:focus, 
.btn-failure2:active, 
.btn-failure2.active, 
.open .dropdown-toggle.btn-failure2 { 
	color: #AF3C43; 
	background-color: #E8B1B2; 
	border-color: #E8B1B2; 
} 
 
.btn-failure2:active, 
.btn-failure2.active, 
.open .dropdown-toggle.btn-failure2 { 
	background-image: none; 
} 
 
.btn-failure2.disabled, 
.btn-failure2[disabled], 
fieldset[disabled] .btn-failure2, 
.btn-failure2.disabled:hover, 
.btn-failure2[disabled]:hover, 
fieldset[disabled] .btn-failure2:hover, 
.btn-failure2.disabled:focus, 
.btn-failure2[disabled]:focus, 
fieldset[disabled] .btn-failure2:focus, 
.btn-failure2.disabled:active, 
.btn-failure2[disabled]:active, 
fieldset[disabled] .btn-failure2:active, 
.btn-failure2.disabled.active, 
.btn-failure2[disabled].active, 
fieldset[disabled] .btn-failure2.active { 
	background-color: #E8B1B2; 
	border-color: #E8B1B2; 
} 
 
.btn-failure2 .badge { 
	color: #E8B1B2; 
	background-color: #AF3C43; 
}

.btn-warning2 { 
	color: #7A6337; 
	background-color: #FCEDAB; 
	border-color: #FCEDAB; 
} 
 
.btn-warning2:hover, 
.btn-warning2:focus, 
.btn-warning2:active, 
.btn-warning2.active, 
.open .dropdown-toggle.btn-warning2 { 
	color: #7A6337; 
	background-color: #FCEDAB; 
	border-color: #FCEDAB; 
} 
 
.btn-warning2:active, 
.btn-warning2.active, 
.open .dropdown-toggle.btn-warning2 { 
	background-image: none; 
} 
 
.btn-warning2.disabled, 
.btn-warning2[disabled], 
fieldset[disabled] .btn-warning2, 
.btn-warning2.disabled:hover, 
.btn-warning2[disabled]:hover, 
fieldset[disabled] .btn-warning2:hover, 
.btn-warning2.disabled:focus, 
.btn-warning2[disabled]:focus, 
fieldset[disabled] .btn-warning2:focus, 
.btn-warning2.disabled:active, 
.btn-warning2[disabled]:active, 
fieldset[disabled] .btn-warning2:active, 
.btn-warning2.disabled.active, 
.btn-warning2[disabled].active, 
fieldset[disabled] .btn-warning2.active { 
	background-color: #FCEDAB; 
	border-color: #FCEDAB; 
} 
 
.btn-warning2 .badge { 
	color: #FCEDAB; 
	background-color: #7A6337; 
}

/* Bootstrap solution to get the buttons corners rounded */

.btn-group > .btn:first-of-type {
	margin-left: 0;
	-webkit-border-top-left-radius: 4px;
	-moz-border-radius-topleft: 4px;
	border-top-left-radius: 4px;
	-webkit-border-bottom-left-radius: 4px;
	-moz-border-radius-bottomleft: 4px;
	border-bottom-left-radius: 4px;
}

.btn-group > .btn:last-of-type, .btn-group > .dropdown-toggle {
	-webkit-border-top-right-radius: 4px;
	-moz-border-radius-topright: 4px;
	border-top-right-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;
	-moz-border-radius-bottomright: 4px;
	border-bottom-right-radius: 4px;
}

/* Bootstrap menu */

.disabled {
	pointer-events: none;
	cursor: default;
	opacity:0.5
}

.enable {
	opacity:1
}

